project('memus','c')

# Dependències
SDL2= dependency('sdl2')
SDL2_IMG= dependency('SDL2_image')
GLIB2= dependency('glib-2.0')
DBUS= dependency('dbus-1')

# Compila
subdir('common')
subdir('tiles8b')
subdir('t8biso')
subdir('tiles16b')
subdir('vgafont')
subdir('external')
subdir('memugg')
#subdir('memugbc')

