COMMON= static_library('common',
                       'error.c','error.h','filesel.c','filesel.h',
                       'scalers2d.c','scalers2d.h','windowfb.c','windowfb.h',
                       'windowtex.c','windowtex.h',
                       dependencies : [SDL2, GLIB2] )
COMMON_H= include_directories('.')
