MEMUGBC_FILES= files('background.c',
                     'conf.c',
                     'dirs.c',
                     'effects.c',
                     'fchooser.c',
                     'frontend.c',
                     'hud.c',
                     'icon.h',
                     'load_bios.h',
                     'mainmenu.c',
                     'menu.c',
                     'mpad.c',
                     'pad.c',
                     'rom.c',
                     'screen.c',
                     'sound.c',
                     'sram.c',
                     'state.c',
                     'background.h',
                     'conf.h',
                     'dirs.h',
                     'effects.h',
                     'fchooser.h',
                     'frontend.h',
                     'hud.h',
                     'load_bios.c',
                     'main.c',
                     'mainmenu.h',
                     'menu.h',
                     'mpad.h',
                     'pad.h',
                     'rom.h',
                     'screen.h',
                     'sound.h',
                     'sram.h',
                     'state.h')

MEMUGBC= executable('memugbc',
                    MEMUGBC_FILES,
                    dependencies : [GLIB2,SDL2,SDL2_IMG],
                    include_directories : [COMMON_H,TILES8B_H,T8BISO_H,GBC_H],
                    link_with : [COMMON,TILES8B,T8BISO,GBC],
                    install : true)
